ai-pipeline.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ai-backend
  template:
    metadata:
      labels:
        app: ai-backend
    spec:
      nodeSelector:
        node-role.kubernetes.io/control-plane: "true" 
      
      containers:
      - name: backend
        image: ai-backend:v24 
        imagePullPolicy: IfNotPresent 
        ports:
        - containerPort: 5000
        - containerPort: 8000
        volumeMounts:
          # --- 名称必须与下面的 volumes 保持一致 ---
          - name: nfs-ai-demo
            mountPath: /app/data/knowledge
            subPath: knowledge
            readOnly: true
          - name: nfs-ai-demo
            mountPath: /app/model_file
            subPath: model_file
          - name: nfs-ai-demo
            mountPath: /app/user-images
            subPath: user-images  
        resources:
          requests:
            cpu: "2"
            memory: "4Gi"
          limits:
            cpu: "4"
            memory: "16Gi"
      volumes:
        # --- 统一名称为 nfs-ai-demo ---
        - name: nfs-ai-demo
          hostPath:
            path: /data00/shared_storage/ai-demo 
            type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: ai-backend-svc
spec:
  selector:
    app: ai-backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: ClusterIP
