prometheus-all.yaml
# --- 第二部分：Prometheus 的运行部署 ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-core
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
      - name: prometheus
        image: prom/prometheus:latest
        args:
          - "--config.file=/etc/prometheus/prometheus.yml"
          - "--storage.tsdb.retention.time=15d"
        ports:
          - containerPort: 9090
        volumeMounts:
          - name: config-volume
            mountPath: /etc/prometheus
      volumes:
        - name: config-volume
          configMap:
            name: prometheus-config # 这里关联上面的 ConfigMap

---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-core    # 这里的名字必须和你在 Grafana 填的域名一致
  namespace: monitoring
spec:
  ports:
    - port: 9090           # 集群内访问端口
      targetPort: 9090     # Pod 监听端口
      protocol: TCP
  selector:
    app: prometheus        # 必须匹配你 Prometheus Deployment 里的 label
  type: ClusterIP          # 仅集群内部通信使用
